# video-vision-mcp

./: .gitignore  .mcp.json.example  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  env.example  pyproject.toml  server.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/video_vision_mcp/: __init__.py  cache.py  config.py  pipeline.py  privacy.py  server.py
src/video_vision_mcp/backends/: __init__.py  base.py  tier1_local.py  tier2_cloud_asr.py  tier3_gemini.py
src/video_vision_mcp/media/: __init__.py  ffmpeg_tools.py  installer.py
src/video_vision_mcp/sources/: __init__.py  jira_loader.py  resolver.py  url_loader.py
tests/: test_smoke.py  test_units.py
