[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-vision-mcp"
version = "0.2.0"
description = "MCP server that turns any video (local file or URL) into frames + transcript for Claude."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vladyslav Strebkov" }]
keywords = ["mcp", "video", "whisper", "gemini", "ffmpeg", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Everything bundled: a single install enables all backends. ffmpeg/whisper.cpp
# are the only external pieces and are auto-installed at runtime if missing.
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "yt-dlp>=2024.0",
    "openai>=1.40",
    "groq>=0.11",
    "google-genai>=0.3.0",
    "pywhispercpp>=1.2.0",
    "static-ffmpeg>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/KitDevUA/video-vision-mcp"
Repository = "https://github.com/KitDevUA/video-vision-mcp"
Issues = "https://github.com/KitDevUA/video-vision-mcp/issues"

[project.scripts]
video-vision-mcp = "video_vision_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_vision_mcp"]
